# migretti

./: .gitignore  .issue.db  README.md  mg.yaml  pyproject.toml
migrations/: 01KCCE833259H1VWP7SRBRK50S_large_dataset.sql  01KCCE8PMPNKA28W1Y3BAGZQ31_fail_conc.sql
src/migretti/: __main__.py  config.py  core.py  db.py  hooks.py  io_utils.py  logging_setup.py  prompt_cmd.py  safety.py  seed.py  squash.py  ulid.py
tests/: test_cli.py  test_cli_cmds.py  test_cli_errors.py  test_config.py  test_config_interpolation.py  test_core.py  test_io_utils.py  test_lock_id.py  test_main.py  test_prompt.py  test_regressions.py  test_seed.py
tests/integration/: test_complex.py  test_dirty_state.py  test_full.py  test_hooks.py  test_regressions_db.py  test_smart_dry_run.py  test_squash.py
tests/test_assets/migrations/: 01_create_users.sql  02_concurrent_index.sql  03_slow.sql  04_fail.sql  05_add_index.sql  06_tamper.sql  07_dry_run.sql
