[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migretti"
version = "0.0.1"
description = "A database migration tool for Python applications."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Farshid", email = "farshid@example.com"},
]
keywords = ["database", "migration", "sql"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "psycopg[binary]",
  "pyyaml",
  "python-ulid",
  "python-dotenv",
  "sqlparse",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "issuedb",
  "build",
]

[project.scripts]
migretti = "migretti.__main__:main"
mg = "migretti.__main__:main"


[tool.hatch.build.targets.wheel]
packages = ["src/migretti"]
